cmake_minimum_required(VERSION 3.5.0)

project(exam)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(ex1.2 Part1/ex1.2.cpp)
add_executable(ex2.2 Part2/ex2.2.cpp)
add_executable(ex3.0 Part3/ex3.0.cpp)
add_executable(ex4.1 Part4/ex4.1.cpp)
add_executable(ex4.2 Part4/ex4.2.cpp)
add_executable(ex5.1 Part5/ex5.1.cpp)
add_executable(ex5.2 Part5/ex5.2.cpp)
add_executable(ex5.3 Part5/ex5.3.cpp)
add_executable(ex6.1 Part6/ex6.1.cpp)
add_executable(ex7.1 Part7/ex7.1.cpp)
add_executable(ex7.2 Part7/ex7.2.cpp)
add_executable(ex8.2 Part8/ex8.2.cpp)
add_executable(ex9.1 Part9/ex9.1.cpp)
add_executable(ex9.2 Part9/ex9.2.cpp)

